# resetrobot_metal

./: CMakeLists.txt  README.md  package.xml
launch/: display.launch  gazebo.launch
meshes/: last_link.STL  link_5.STL  metal.STL
urdf/: resetrobot_metal.csv  resetrobot_metal.urdf
